--- a/version-propre.Rmd
+++ b/version-propre.Rmd
@@ -41,7 +41,7 @@ Données :
 
 | Variable | Valeur possible | Définition |
 |--|--|--|
-| R | entre 1 et 3 | Correspond à la rugosité des recif corralien. Où 1 équivaut à une structrue parfaitement lisse et où 3 est un rugosité très pronnoncer rarement atteint qui équivaut a un récif corailien offrant une tres bonne qualité d'habitat. |
+| R | entre 1 et 3 | Correspond à la rugosité des recif corralien. Où 1 équivaut à une structrue parfaitement lisse et où 3 est un rugosité très pronnoncer rarement atteint qui équivaut a un récif corailien offrant une tres bonne qualité d'habitat.
 | C | entre 0 et 1 | Correspond à la proportion de couverture du paysage par le corail. Où 1 est une couverture complete et où 0 est l'extinction des corail. |
 | M | entre 0 et 1 | Correspond à la proportion de couverture du paysage par les macroalgues. Où 1 est une couverture compete et où 0 est l'extinction des macroalgue. |
 | Y | entre 0 et 1 | Le gazon d'algue correspond a tout ce qui n'est pas corail et macroalgue. |
@@ -52,26 +52,29 @@ Méthode :
 La capacité de support de l'environnement prendre en compte l'abondance des algues, qui constituent leur nourriture, ainsi que la qualité de l'habitat K(M + T, R).  
 $K(M+T,R) = \frac{(c1R + c2)}{K_{max}}\frac{\delta(M+Y)}{1 + v(M+Y)}$
 
-Modèle :  
+Modèle : 
+$\frac{dC}{dt} = rTC - dC - aMC$   
 $\frac{dM}{dt} = aMC - \frac{\alpha \frac{P}{\beta}M}{M + Y} - \gamma MY$  
-$\frac{dC}{dt} = rTC - dC - aMC$  
 $\frac{dP}{dt} = sP(1 - \frac{P}{\beta K(M+T,R)} - sfP$  
 $\frac{dR}{dt} = h_GC(3-R) - h_E(1-C)(R-1)$  
 $\frac{dY}{dt} = 1 - M - C$  
 
-Modèle Nondimentionner:  
-$\frac{dM}{dt} = (asMC - \frac{\alpha \frac{P}{\beta}M}{M + Y} - \gamma MY)\frac{1}{s}$  
-$\frac{dC}{dt} = (rTC - dC - aMC)\frac{1}{s}$  
-$\frac{dP}{dt} = P(1 - \frac{P}{\beta K(M+T,R)} - fP$  
-$\frac{dR}{dt} = h_GC(3-R) - h_E(1-C)(R-1)$  
-$\frac{dY}{dt} = 1 - M - C$  
+Modèle Nondimentionner: 
+$\frac{dC}{dts} = (rTC - dC - aMC)\frac{1}{s}$   
+$\frac{dM}{dts} = (asMC - \frac{\alpha \frac{P}{\beta}M}{M + Y} - \gamma MY)\frac{1}{s}$  
+$\frac{dP}{dts} = P(1 - \frac{P}{\beta K(M+T,R)} - fP$  
+$\frac{dR}{dts} = h_GC(3-R) - h_E(1-C)(R-1)$  
+$\frac{dY}{dts} = 1 - M - C$  
 
 Mise en œuvre d'un ouragan stochastique:  
-$dC = g_C(C,M,P,R,t)dt - c(F+\sigma \epsilon)dq$  
+$dC = g_C(C,M,P,R,t)dt - c(F()+\sigma \epsilon)dq$  
 $dM = g_M(C,M,P,R,t)dt - Mm_Hdq$  
 $dP = g_P(C,M,P,R,t)dt$  
-$dR = g_R(C,M,P,R,t)dt - (R-1)(G + \sigma \epsilon)dq$  
+$dR = g_R(C,M,P,R,t)dt - (R-1)(G() + \sigma \epsilon)dq$  
 $dY = 1 - M - C$  
+
+$F() = 0.0512 + 0.0176*te$ avec un maximun de F() = 0.5.
+
 où $g_C(C,M,P,R,t),g_M(C,M,P,R,t),g_P(C,M,P,R,t),g_R(C,M,P,R,t)$ sont des fonctions qui represente le modèle.  
 où q est un processus de saut de Poisson avec un taux de saut λ tel que dq = 0 avec une probabilité de 1 - λdt et dq = 1 avec une probabilité de λdt.  
 
@@ -80,8 +83,11 @@ Supposition :
 2. Les perturbations ou stresse des récifs coralliens autres que les ouragans, les impacts indirects de la pêche ou la compétition de l'espace avec les macroalgues ne sont pas pris en compte.  
 3. L'effort de pêche ont une influence proportionnelement de la dynamique de population parrofishs et est constant pour toute les années de la simulation.  
 4. Après un oragan, le gazon d'algues colonise immédiatement tout l'espace libre.  
-5. Les ouragans n'ont pas d'effets directs significatifs sur l'abondance ou la croissance des parrofishs.  
-6. La distribution des coraux, des algues macroscopiques et des poissons perroquets dans l'espace n'a pas d'impact sur leur dynamique.  
+5. Le gazon d'algue correspond a tout la surface qui n'est pas des coraux ou des macroalgue.
+6. Les ouragans n'ont pas d'effets directs significatifs sur l'abondance ou la croissance des parrofishs. 
+7. Les macroalgues on le même niveau de dommage peu importe le niveau d'impact. 
+8. Les ouragans on trois niveau d'impacts éléver, moyen et faible et trois fréquences moyennes soit 1 par 9 ans, 1 par 15 ans et 1 par 30 ans.
+9. La distribution des coraux, des algues macroscopiques et des poissons perroquets dans l'espace n'a pas d'impact sur leur dynamique.  
 
 Calcul :
 
@@ -131,7 +137,6 @@ dessinSol <- function(ic=c(M=0.001,C=0.56,P=0.75),
   return(soln[30,"C"])
 }
 ```
-
 
 ```{r}
 # Matrice des valeur finale de la proportion de corail apres "times" ans
