--- a/Partie_2.Rmd
+++ b/Partie_2.Rmd
@@ -4,7 +4,7 @@ author: "AmigoTeam"
 date: "2024-04-09"
 output: html_document
 ---
-# Une modèle pour déterminer l'importance des impacts variables des ouragans sur le long terme des récifs corailiens. 
+# Une modèle pour déterminer l'importance des impacts variables des ouragans sur le long terme des récifs corailiens.  
 
 Par Antoince Castonguay et Félix Richard. L'AmigoTeam.  
 antoine.castonguay@usherbrooke.ca  
@@ -38,7 +38,7 @@ $F() = 0.0512 + 0.0176*te$ avec un maximun de F() = 0.5.
 | Paramètre | Valeur | Définition |
 |--|--|--|
 | s | 0.49 | Taux de croissance du parrofish par année |
-| r | 1 |  Taux pour lequel le corail remplace le gazon d'algue par année (Taux de coissance du corail)|
+| r | 1 |  Taux pour lequel le corail remplace le gazon d'algue par année (Taux de coissance du corail) |
 | a | 0.1 | Taux pour lequel les macroalgues remplace le corail par année |
 | gamma | 1.6,0.8 | Taux pour lequel les macroalgues remplace le gazon d'algue par année |
 | d | 0.44 | Taux de mortalité du corail par année |
@@ -67,4 +67,11 @@ $F() = 0.0512 + 0.0176*te$ avec un maximun de F() = 0.5.
 | P | entre 0 et 1 | Correspond à la population des parrofishs. Où 1 est lorsque la capacité de support maximale est atteind et où 0 est l'extinction des parrofishs |
 
 ## Résultat
-Présenter les graphiques 
+
+La relation entre la rugosité et le niveau d'impact des ouragants sur les récif corialien avec 3 niveau d'effort de peche :
+
+
+La relation entre l'effort de peche et le niveau d'impact des ouragant sur les récif corialien avec 3 niveau de rugosité de départ :
+
+
+La relation entre l'effort de peche et la rugosité avec un niveau d'impact des ouragant sur les récif corialien stochastique :
