--- a/version-propre.Rmd
+++ b/version-propre.Rmd
@@ -85,7 +85,7 @@ Supposition :
 4. Après un oragan, le gazon d'algues colonise immédiatement tout l'espace libre.  
 5. Le gazon d'algue correspond a tout la surface qui n'est pas des coraux ou des macroalgue.
 6. Les ouragans n'ont pas d'effets directs significatifs sur l'abondance ou la croissance des parrofishs. 
-7. Les macroalgues on le même niveau de dommage peu importe le niveau d'impact. 
+7. Les macroalgues on le même niveau de dommage peu importe le niveau d'impact des ouragan. 
 8. Les ouragans on trois niveau d'impacts éléver, moyen et faible et trois fréquences moyennes soit 1 par 9 ans, 1 par 15 ans et 1 par 30 ans.
 9. La distribution des coraux, des algues macroscopiques et des poissons perroquets dans l'espace n'a pas d'impact sur leur dynamique.  
 
@@ -98,7 +98,7 @@ library(viridis)
 ```
 
 ```{r}
-# Fonction pour le modele deterministe du l'interaction entre le corail, les marcoalgue et les parrofishs.
+# Fonction pour le modele deterministe du l'interaction entre le corail, les marcoalgue et les parrofishs avec une rugosité fixe.
 interaction_coral <- function(t, vars, parms){
   with(as.list(c(parms, vars)), {
     
@@ -142,11 +142,11 @@ dessinSol <- function(ic=c(M=0.001,C=0.56,P=0.75),
 # Matrice des valeur finale de la proportion de corail apres "times" ans
 coral <- matrix(data = NA, nrow = 41, ncol = 41)
 
-# Boucle sur rugosité
+# Boucle sur fish 
 for (i in 1:41) {
   fish <- (i - 1) * (1 / 40)  # Calcul de la valeur de fish
   
-  # Boucle sur fish
+  # Boucle sur rugosité
   for (j in 1:41) {
     rugo <- 1 + (j - 1) * (2 / 40)  # Calcul de la valeur de rugosité
     
@@ -157,7 +157,7 @@ for (i in 1:41) {
                                 delta = 4.557, v = 0.9877, hG = 0.03, hE = 0.01,
                                 gamma=1.6,rug=rugo))
     
-    # Attribut la dominance du corail, des macroalgue ou d'un équilibre apres time ans
+    # Attribut la dominance du corail, des macroalgue ou d'une instabilité apres time ans
     if(res<0.0001){
       color.tag <- 0
     }else if(res<0.45){
@@ -172,8 +172,11 @@ for (i in 1:41) {
 ```
 
 ```{r}
+# Différent état de rugosité de départ 
 rug.vec <- c(1.8,2.1,2.4)
 fish.vec <- data.frame()
+
+# Pour chaque rugosité calcule une situation favorable et défavorable au corail et la zone intermédiaire correspond a une zone d'instabilité entre les deux droite.
 for (j in seq(3,9,by=3)) {
   for (i in 1:50) {
     fish <- (i - 1) * (1 / 50)  # Calcul de la valeur de fish
@@ -192,7 +195,6 @@ for (j in seq(3,9,by=3)) {
     fish.vec[i,j] <- res2
   }
 }
-
 ```
 
 Résultat :
@@ -202,6 +204,7 @@ Résultat :
 row_names <- paste(seq(1, 3, by = (2 / 40)))
 col_names <- paste(seq(0, 1, by = (1 / 40)))
 
+# Attribution des nom de ligne et de colonnes
 row.names(coral) <- row_names
 colnames(coral) <- col_names
 
@@ -209,8 +212,9 @@ colnames(coral) <- col_names
 image(1:nrow(coral), 1:ncol(coral), t(coral), col = plasma(40),
       xlab = "fishing effort", ylab = "R", main = "Graphique",axes=F);axis(side = 1, at = 1:ncol(coral), labels = col_names);axis(side = 2, at = 1:nrow(coral), labels = row_names)
 ```
-
+Affichage des graphique des valeur d'équilibre apres 30 ans de la couverture corallienne en fonction de l'effort de pêche par rapport au taux de croissance des poissons-perroquets (f) pour différentes valeurs de rugosité (R) afin de démontrer les implications de l'effort de pêche sur la couvuture des récif corailien.
 ```{r}
+# Affichage des graphiques
 par(mfrow=c(1,3))
 plot(x = fish.vec[,1], y = fish.vec[,2],type = "l",ylim = c(0,0.7),xlab = "fishing effort", ylab = "Proportion de Corail apres 30 ans", main = paste("Graphique R =", rug.vec[1]))
 lines(x = fish.vec[,1], y = fish.vec[,3])
@@ -502,6 +506,5 @@ legend("topright", legend = c("/9 ans", "/15 ans","/30 ans"),
 
 
 ```
-
 
 Interprétation : 
