--- a/Partie_2.Rmd
+++ b/Partie_2.Rmd
@@ -3,6 +3,7 @@ title: "Partie_2"
 author: "AmigoTeam"
 date: "2024-04-09"
 output: html_document
+bibliography: AmigoTeam.bib
 ---
 # Une modèle pour déterminer l'importance des impacts variables des ouragans sur le long terme des récifs corailiens.  
 
@@ -19,24 +20,28 @@ Dans notre étude, nous avons cherché à rendre ce modèle plus réaliste en y 
 
 ## Méthode
 
-Mise en œuvre d'un modele avec des ouragan stochastique:  
-$dC = g_C(C,M,P,R,t)dt - c(F()+\sigma \epsilon)idq$  
-$dM = g_M(C,M,P,R,t)dt - Mm_Hdqi$  
-$dP = g_P(C,M,P,R,t)dt$  
-$dR = g_R(C,M,P,R,t)dt - (R-1)(G() + \sigma \epsilon)idq$  
-$dY = 1 - M - C$  
+Mise en œuvre d'un ouragan stochastique:  
+$\small{dC = g_C(C,M,P,R,t)dt - C(F() + \sigma \epsilon)idq}$  
+$\small{dM = g_M(C,M,P,R,t)dt - Mm_Hidq}$  
+$\small{dP = g_P(C,M,P,R,t)dt}$  
+$\small{dR = g_R(C,M,P,R,t)dt - (R-1)(G() + \sigma \epsilon)idq}$  
+$\small{dY = 1 - M - C}$  
 
-$g_C(C,M,P,R,t) = rTC - dC - aMC$  
-$g_M(C,M,P,R,t) = aMC - \frac{\alpha \frac{P}{\beta}M}{M + Y} - \gamma MY$  
-$g_P(C,M,P,R,t) = sP(1 - \frac{P}{\beta K(M+T,R)} - sfP$  
-$g_R(C,M,P,R,t) = h_GC(3-R) - h_E(1-C)(R-1)$  
+$\small{F() = 0.0512 + 0.0176*te}$ avec un maximun de F() = 0.5.
 
-$K(M+T,R) = \frac{(c1R + c2)}{K_{max}}\frac{\delta(M+Y)}{1 + v(M+Y)}$
+$\small{g_C(C,M,P,R,t) = rTC - dC - aMC}$   
+$\small{g_M(C,M,P,R,t) = aMC} - \frac{\alpha \frac{P}{\beta}M}{M + Y} - \small{\gamma MY}$  
+$\small{g_P(C,M,P,R,t) = sP(1 -} \frac{P}{\beta K(M+T,R)} \small{ - sfP}$  
+$\small{g_R(C,M,P,R,t) = h_GC(3-R) - h_E(1-C)(R-1)}$  
+
+$\small{K(M+T,R) = }\frac{(c1R + c2)}{K_{max}}\frac{\delta(M+Y)}{1 + v(M+Y)}$
 
 $F() = 0.0512 + 0.0176*te$ avec un maximun de F() = 0.5.
 
+<div style="width: 85%; margin: 0 auto;">
+#### Tableau 1 : Paramètre utiliser dans le modèle de référence et leurs définitions.
 | Paramètre | Valeur | Définition |
-|--|--|--|
+|:--:|:----:|:--------------|
 | s | 0.49 | Taux de croissance du parrofish par année |
 | r | 1 |  Taux pour lequel le corail remplace le gazon d'algue par année (Taux de coissance du corail) |
 | a | 0.1 | Taux pour lequel les macroalgues remplace le corail par année |
@@ -58,20 +63,24 @@ $F() = 0.0512 + 0.0176*te$ avec un maximun de F() = 0.5.
 | epsilon | entre 0 et 1 | Variable aléatoire suivant une distribution normale standard qui décrit la composante aléatoire des impacts des oragans sur le corail |
 | i | entre 0 et 1 | Pourcentage d'impacte des ouragants |
 
+#### Tableau 2 : Variable utiliser dans le modèle de référence et leur définition anisi que leurs limites.
 | Variable | Valeur possible | Définition |
-|--|--|--|
-| R | entre 1 et 3 | Correspond à la rugosité des recif corralien. Où 1 équivaut à une structrue parfaitement lisse et où 3 est un rugosité très pronnoncer rarement atteint qui équivaut a un récif corailien offrant une tres bonne qualité d'habitat.
+|:--:|:----:|:--------------|
 | C | entre 0 et 1 | Correspond à la proportion de couverture du paysage par le corail. Où 1 est une couverture complete et où 0 est l'extinction des corail. |
 | M | entre 0 et 1 | Correspond à la proportion de couverture du paysage par les macroalgues. Où 1 est une couverture compete et où 0 est l'extinction des macroalgue. |
-| Y | entre 0 et 1 | Le gazon d'algue correspond a tout ce qui n'est pas corail et macroalgue. |
 | P | entre 0 et 1 | Correspond à la population des parrofishs. Où 1 est lorsque la capacité de support maximale est atteind et où 0 est l'extinction des parrofishs |
+| R | entre 1 et 3 | Correspond à la rugosité des recif corralien. Où 1 équivaut à une structrue parfaitement lisse et où 3 est un rugosité très pronnoncer rarement atteint qui équivaut a un récif corailien offrant une tres bonne qualité d'habitat. |
+| Y | entre 0 et 1 | Le gazon d'algue correspond a tout ce qui n'est pas corail et macroalgue. |
+</div>
 
 ## Résultat
 
-La relation entre la rugosité et le niveau d'impact des ouragants sur les récif corialien avec 3 niveau d'effort de peche :
+La relation entre la rugosité et le niveau d'impact des ouragants sur les récif corialien avec 3 niveau d'effort de peche : 
 
 
 La relation entre l'effort de peche et le niveau d'impact des ouragant sur les récif corialien avec 3 niveau de rugosité de départ :
 
 
 La relation entre l'effort de peche et la rugosité avec un niveau d'impact des ouragant sur les récif corialien stochastique :
+
+# Référence
