--- a/version-propre.Rmd
+++ b/version-propre.Rmd
@@ -22,67 +22,68 @@ Est ce que la résilience des récifs coraliens est suffisante pour lutter contr
 Elle est suffisante jusqu'à une certaine limite qui dépend beaucoup de la complexité du corail, le l'effort de pêche et de l'impact aléatoire des ouragans.
 
 ### Données :  
-
+<div style="width: 85%; margin: 0 auto;">
+#### Tableau 1 : Paramètre utiliser dans le modèle de référence et leurs définitions.
 | Paramètre | Valeur | Définition |
-|--|--|--|
-| s | 0.49 | Taux de croissance du parrofish par année |
-| r | 1 |  Taux pour lequel le corail remplace le gazon d'algue par année (Taux de coissance du corail) |
-| a | 0.1 | Taux pour lequel les macroalgues remplace le corail par année |
-| gamma | 1.6,0.8 | Taux pour lequel les macroalgues remplace le gazon d'algue par année |
-| d | 0.44 | Taux de mortalité du corail par année |
-| Alpha | 1 | Taux de broutage maximale par le parrofish |
-| f | variable | Effort de pêche en pourcentage |
-| c1,c2 | 3.65,-3.21 | Détermine la relation entre la complexité du corail et la capacité de support du parrofish |
-| delta,v | 4.557,0.9877 | Détermine la relation entre la nourriture disponible et la capacité de support du parrofish |
-| Beta | 1 | Capacité de support de l'environnement pour le parrofish relatif |
-| hG | 0.03 | Rétablissement de la complexité du corail par année |
-| hE | 0.01 | Érosion de la complexité du corail par année |
-| kmax | 17.745 | Limite supérieure d'abondance des parrofishs |
-| F() | 0.0512 + 0.0176*te, 0 | La proportion de la couverture corallienne affectée par un ouragan respectivement fort/moyen et faible |
-| G() | 0.5, F, 0.05 | La proportion attendue de rugosité affectée par les impacts des ouragans respectivement fort, moyen et faible |
-| mH | 0.8 | Taux de mortalité des macroalgues suite a un ouragan |
-| te | varaible | Temps écouler depuis le dernier ouragan en année |
-| sigma | 0.05 | Écart maximale de la variabilité des impacts des oragans d'epsilon |
-| epsilon | entre 0 et 1 | Variable aléatoire suivant une distribution normale standard qui décrit la composante aléatoire des impacts des oragans sur le corail |
-
+|:--:|:----:|:--------------|
+| s         | 0.49   | Taux de croissance des parrofishs par année |
+| r         | 1      | Taux pour lequel le corail remplace le gazon d'algue par année (Taux de coissance du corail) |
+| a         | 0.1    | Taux pour lequel les macroalgues remplace le corail par année |
+| gamma     | 1.6,0.8| Taux pour lequel les macroalgues remplace le gazon d'algue par année |
+| d         | 0.44   | Taux de mortalité du corail par année |
+| Alpha     | 1      | Taux de broutage maximale par le parrofish |
+| f         | variable| Effort de pêche en pourcentage |
+| c1,c2     | 3.65,-3.21| Détermine la relation entre la complexité du corail et la capacité de support du parrofish |
+| delta,v   | 4.557,0.9877| Détermine la relation entre la nourriture disponible et la capacité de support du parrofish |
+| Beta      | 1      | Capacité de support de l'environnement pour le parrofish relatif |
+| hG        | 0.03   | Rétablissement de la complexité du corail par année |
+| hE        | 0.01   | Érosion de la complexité du corail par année |
+| kmax      | 17.745 | Limite supérieure d'abondance des parrofishs |
+| F()       | 0.0512 + 0.0176*te, 0| La proportion de la couverture corallienne affectée par un ouragan respectivement fort/moyen et faible |
+| G()       | 0.5, F, 0.05| La proportion attendue de rugosité affectée par les impacts des ouragans respectivement fort, moyen et faible |
+| mH        | 0.8    | Taux de mortalité des macroalgues suite à un ouragan |
+| te        | variable| Temps écoulé depuis le dernier ouragan en année |
+| sigma     | 0.05   | Écart maximal de la variabilité des impacts des ouragans d'epsilon |
+| epsilon   | entre 0 et 1| Variable aléatoire suivant une distribution normale standard qui décrit la composante aléatoire des impacts des ouragans sur le corail |
+#### Tableau 2 : Variable utiliser dans le modèle de référence et leur définition anisi que leurs limites.
 | Variable | Valeur possible | Définition |
-|--|--|--|
-| R | entre 1 et 3 | Correspond à la rugosité des récifs coralliens, où 1 équivaut à une structure parfaitement lisse et où 3 représente une rugosité très prononcée, rarement atteinte, qui signifie un récif corallien offrant une très bonne qualité d'habitat. |
+|:--:|:----:|:--------------|
 | C | entre 0 et 1 | Correspond à la proportion de couverture du paysage par le corail. Où 1 est une couverture complete et où 0 est l'extinction des corail. |
 | M | entre 0 et 1 | Correspond à la proportion de couverture du paysage par les macroalgues. Où 1 est une couverture compete et où 0 est l'extinction des macroalgue. |
-| Y | entre 0 et 1 | Le gazon d'algue correspond a tout ce qui n'est pas corail et macroalgue. |
 | P | entre 0 et 1 | Correspond à la population des parrofishs. Où 1 est lorsque la capacité de support maximale est atteind et où 0 est l'extinction des parrofishs |
+| R | entre 1 et 3 | Correspond à la rugosité des récifs coralliens, où 1 équivaut à une structure parfaitement lisse et où 3 représente une rugosité très prononcée, rarement atteinte, qui signifie un récif corallien offrant une très bonne qualité d'habitat. |
+| Y | entre 0 et 1 | Le gazon d'algue correspond a tout ce qui n'est pas corail et macroalgue. |
+</div>
 
 ### Méthode :
+Modèle :  
+<div style="margin: 0 auto;">
+$\frac{dC}{dt} = \small{rTC - dC - aMC}$   
+$\frac{dM}{dt} = \small{aMC} - \frac{\alpha \frac{P}{\beta}M}{M + Y} - \small{\gamma MY}$  
+$\frac{dP}{dt} = \small{sP(1 -} \frac{P}{\beta K(M+T,R)} \small{ - sfP}$  
+$\frac{dR}{dt} = \small{h_GC(3-R) - h_E(1-C)(R-1)}$  
+$\frac{dY}{dt} = \small{1 - M - C}$  
+La capacité de support de l'environnement pour le parrofishs prendre en compte l'abondance des algues, qui constituent leur nourriture, ainsi que la qualité de l'habitat K(M + T, R).  
+$\small{K(M+T,R) = }\frac{(c1R + c2)}{K_{max}}\frac{\delta(M+Y)}{1 + v(M+Y)}$
 
-La capacité de support de l'environnement prendre en compte l'abondance des algues, qui constituent leur nourriture, ainsi que la qualité de l'habitat K(M + T, R).  
-$K(M+T,R) = \frac{(c1R + c2)}{K_{max}}\frac{\delta(M+Y)}{1 + v(M+Y)}$
-
-Modèle : 
-$\frac{dC}{dt} = rTC - dC - aMC$   
-$\frac{dM}{dt} = aMC - \frac{\alpha \frac{P}{\beta}M}{M + Y} - \gamma MY$  
-$\frac{dP}{dt} = sP(1 - \frac{P}{\beta K(M+T,R)} - sfP$  
-$\frac{dR}{dt} = h_GC(3-R) - h_E(1-C)(R-1)$  
-$\frac{dY}{dt} = 1 - M - C$  
-
-Modèle Nondimentionner: 
-$\frac{dC}{dts} = (rTC - dC - aMC)\frac{1}{s}$   
-$\frac{dM}{dts} = (asMC - \frac{\alpha \frac{P}{\beta}M}{M + Y} - \gamma MY)\frac{1}{s}$  
-$\frac{dP}{dts} = P(1 - \frac{P}{\beta K(M+T,R)} - fP$  
-$\frac{dR}{dts} = h_GC(3-R) - h_E(1-C)(R-1)$  
-$\frac{dY}{dts} = 1 - M - C$  
+Modèle Nondimentionner par rapport taux de croissance des parrofish par année:  
+$\frac{dC}{dts} = (\small{rTC - dC - aMC})\frac{1}{s}$   
+$\frac{dM}{dts} = (\small{aMC} - \frac{\alpha \frac{P}{\beta}M}{M + Y} - \small{\gamma MY})\frac{1}{s}$   
+$\frac{dP}{dts} = \small{P(1 -} \frac{P}{\beta K(M+T,R)} \small{ - fP}$  
+$\frac{dR}{dts} = \small{h_GC(3-R) - h_E(1-C)(R-1)}$  
+$\frac{dY}{dts} = \small{1 - M - C}$  
 
 Mise en œuvre d'un ouragan stochastique:  
-$dC = g_C(C,M,P,R,t)dt - c(F()+\sigma \epsilon)dq$  
-$dM = g_M(C,M,P,R,t)dt - Mm_Hdq$  
-$dP = g_P(C,M,P,R,t)dt$  
-$dR = g_R(C,M,P,R,t)dt - (R-1)(G() + \sigma \epsilon)dq$  
-$dY = 1 - M - C$  
+$\small{dC = g_C(C,M,P,R,t)dt - C(F() + \sigma \epsilon)dq}$  
+$\small{dM = g_M(C,M,P,R,t)dt - Mm_Hdq}$  
+$\small{dP = g_P(C,M,P,R,t)dt}$  
+$\small{dR = g_R(C,M,P,R,t)dt - (R-1)(G() + \sigma \epsilon)dq}$  
+$\small{dY = 1 - M - C}$  
 
-$F() = 0.0512 + 0.0176*te$ avec un maximun de F() = 0.5.
+$\small{F() = 0.0512 + 0.0176*te}$ avec un maximun de F() = 0.5.
 
-où $g_C(C,M,P,R,t),g_M(C,M,P,R,t),g_P(C,M,P,R,t),g_R(C,M,P,R,t)$ sont des fonctions qui represente le modèle.  
-où q est un processus de saut de Poisson avec un taux de saut λ tel que dq = 0 avec une probabilité de 1 - λdt et dq = 1 avec une probabilité de λdt.  
+où $\small{g_C(C,M,P,R,t),g_M(C,M,P,R,t),g_P(C,M,P,R,t),g_R(C,M,P,R,t)}$ sont des fonctions qui represente le modèle.  
+Et où q est un processus de saut de Poisson avec un taux de saut λ tel que dq = 0 avec une probabilité de 1 - λdt et dq = 1 avec une probabilité de λdt.  
 
 ### Supposition :
 1. Aucun changement dans la température, la chimie de l'eau ou l'élévation du niveau de la mer est significatif sur l'echelle du temps étudier.  
@@ -94,7 +95,7 @@ où q est un processus de saut de Poisson avec un taux de saut λ tel que dq = 0
 7. Les macroalgues on le même niveau de dommage peu importe le niveau d'impact des ouragan. 
 8. Les ouragans on trois niveau d'impacts éléver, moyen et faible et trois fréquences moyennes soit 1 par 9 ans, 1 par 15 ans et 1 par 30 ans.
 9. La distribution des coraux, des algues macroscopiques et des poissons perroquets dans l'espace n'a pas d'impact sur leur dynamique. 
-10. Un ouragan affecte affecte l'ensemble de l'écosysteme de fasson égale.  
+10. Un ouragan affecte l'ensemble de l'écosysteme de fasson égale.  
 
 ### Calcul :
 
