--- a/Partie_2.Rmd
+++ b/Partie_2.Rmd
@@ -74,14 +74,13 @@ $F() = 0.0512 + 0.0176*te$ avec un maximun de F() = 0.5.
 </div>
 
 ## Résultat
-
+Dans un premier lieux, la fonction de la simulation du modele XXX a été dévelloper. La fonction prend en argument la rugosité de départ (R0), l'effort de pêche (f), la probabilité qu'un ouragan survienne dans la zone des récit corailien par an (lamda), le niveau d'impact de l'ouragan (impact) et la duré des pas de temps sachant que 1 équivaut a faire un pas de temps d'une année (dt).
 ```{r}
 corailstochastiquev2 <- function (R0,f,lambda=1/30,impact=0.5,dt=1,graph=FALSE){
   #on instaure une étendue de temps
   tmax <- 100
   t <- 0
-  #le temps au dernier ouragan, en tenant compte que la simulation ne commence pas nécessairement
-  #juste après un ouragan
+  #le temps au dernier ouragan, en tenant compte que la simulation ne commence pas nécessairement juste après un ouragan
   to <- runif(1,0,25.5)
   
   #on pose les valeurs de départ et les paramètres
@@ -106,14 +105,12 @@ corailstochastiquev2 <- function (R0,f,lambda=1/30,impact=0.5,dt=1,graph=FALSE){
   o <- 0.05
   mH <- 0.8
   
-  
   #on initie les vecteurs de résultats
   vecC <- C
   vecM <- M
   vecY <- Y
   vecR <- R
   vecP <- P
-  
   
   while (t<tmax){
     
@@ -146,19 +143,17 @@ corailstochastiquev2 <- function (R0,f,lambda=1/30,impact=0.5,dt=1,graph=FALSE){
     }
     
     #on calcule les changements
-    dM <- ((a)*M*C - ((1)*P*M/(M+Y)) + (g)*M*Y)*dt - dommM
     dC <- ((r)*Y*C - (d)*C - (a)*M*C)*dt - dommC
+    dM <- ((a)*M*C - ((1)*P*M/(M+Y)) + (g)*M*Y)*dt - dommM
     dP <- ((s)*P*(1 - (P/((((ca+cb*R)/kmax)*((delta*(M+Y))/(1+v*(M+Y))))))) -(f*s)*P)*dt 
     dR <- ((hG)*C*(3 - R) - (hE)*(1 - C)*(R - 1))*dt - dommR
-    #dY <- 0 - dM - dC 
     
     #on effectue les changements
-    M <- pmax(M + dM,0.0001)
     C <- pmax(C + dC,0.0001)
-    #Y <- Y + dY
-    Y <- 1 - M - C
-    R <- R + dR
+    M <- pmax(M + dM,0.0001)
     P <- pmax(P + dP, 0.0001)
+    R <- R + dR
+    Y <- 1 - M - C
     
     #on sauve les nouvelles valeurs dans leur vecteurs
     vecC <- c(vecC,C)
@@ -190,6 +185,7 @@ corailstochastiquev2 <- function (R0,f,lambda=1/30,impact=0.5,dt=1,graph=FALSE){
 La relation entre la rugosité et le niveau d'impact des ouragants sur les récif corialien avec 3 niveau d'effort de peche : 
 
 ```{r}
+library(fields)
 #graphique de C en fonction de I et R
 graph.imageCIR <- function(fishing,freq,it=10,pas=0.1){
   
@@ -225,7 +221,9 @@ graph.imageCIR <- function(fishing,freq,it=10,pas=0.1){
              xlab = "impact", ylab = "Rugosité initiale",
              main=c("écart-type de C finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
 }
-graph.imageCIR(fishing = 0.5, freq = 1/20, it=2, pas = 0.5)
+graph.imageCIR(fishing = 0.1, freq = 1/15, it=5, pas = 0.5)
+graph.imageCIR(fishing = 0.4, freq = 1/15, it=5, pas = 0.5)
+graph.imageCIR(fishing = 0.7, freq = 1/15, it=5, pas = 0.5)
 
 #graphique de R finale en fonction de I et R
 graph.imageRIR <- function(fishing,freq,it=10,pas=0.1){
@@ -262,7 +260,9 @@ graph.imageRIR <- function(fishing,freq,it=10,pas=0.1){
              xlab = "impact", ylab = "Rugosité initiale",
              main=c("écart-type de R finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
 }
-graph.imageRIR(fishing = 0.5, freq = 1/20, it=2, pas = 0.5)
+graph.imageRIR(fishing = 0.1, freq = 1/15, it=5, pas = 0.5)
+graph.imageRIR(fishing = 0.4, freq = 1/15, it=5, pas = 0.5)
+graph.imageRIR(fishing = 0.7, freq = 1/15, it=5, pas = 0.5)
 
 ```
 
@@ -307,8 +307,15 @@ graph.imageCIf <- function(R0,freq,it=10,pas=0.1){
              xlab = "impact", ylab = "Effort de pêche",
              main=c("écart-type de C finale",paste(c("fréq:1/",1/l,", rug. ini:",R0),collapse = "")))
 }
-graph.imageCIf(R0=2,freq = 1/20,it=2,pas = 0.5)
-
+graph.imageCIf(R0=2.8,freq = 1/15,it=10,pas = 0.1)
+# graph.imageCIf(R0=1.4,freq = 1/15,it=2,pas = 0.25)
+# graph.imageCIf(R0=1.6,freq = 1/15,it=2,pas = 0.25)
+# graph.imageCIf(R0=1.8,freq = 1/15,it=2,pas = 0.25)
+# graph.imageCIf(R0=2.0,freq = 1/15,it=2,pas = 0.25)
+# graph.imageCIf(R0=2.2,freq = 1/15,it=2,pas = 0.25)
+# graph.imageCIf(R0=2.4,freq = 1/15,it=2,pas = 0.25)
+# graph.imageCIf(R0=2.6,freq = 1/15,it=2,pas = 0.25)
+# graph.imageCIf(R0=2.8,freq = 1/15,it=2,pas = 0.25)
 
 #graphique de R finale en fonction de I et f
 graph.imageRIf <- function(R0,freq,it=10,pas=0.1){
@@ -344,7 +351,9 @@ graph.imageRIf <- function(R0,freq,it=10,pas=0.1){
              xlab = "impact", ylab = "Effort de pêche",
              main=c("écart-type de R finale",paste(c("fréq:1/",1/l,", rug. ini:",R0),collapse = "")))
 }
-graph.imageRIf(R0=2,freq = 1/20,it=2,pas = 0.5)
+# graph.imageRIf(R0=1.8,freq = 1/15,it=5,pas = 0.5)
+# graph.imageRIf(R0=2.1,freq = 1/15,it=5,pas = 0.5)
+# graph.imageRIf(R0=2.4,freq = 1/15,it=5,pas = 0.5)
 ```
 
 
